<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_bar"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        >

    </item><item
        android:id="@+id/pending_tickets"
        android:title="@string/yourTickets"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_play"
        >

    </item><item
        android:id="@+id/view_selector"
        android:title="@string/View"
        android:icon="@drawable/ic_vie_grid"
        app:showAsAction="always"
        >

    </item><!--<item
        android:id="@+id/setting_button"
        android:title="@string/Settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_"
        android:orderInCategory="1"
    >
    </item>-->

    <item
        android:id="@+id/log_out_button"
        android:title="@string/logOut"
        app:showAsAction="always"
        android:icon="@drawable/ic_exit"
        android:orderInCategory="2"
        >
    </item>
</menu>