<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrationText"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        tools:layout_editor_absoluteX="3dp" />

    <EditText
        android:id="@+id/userNameEditTextRegXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView"
        app:layout_constraintVertical_bias="0.13"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/emailEditTextRegXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditTextRegXml"
        app:layout_constraintVertical_bias="0.1"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passwordEditTextRegXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegXml"
        app:layout_constraintVertical_bias="0.113"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passwordAgainEditTextRegXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordAgain"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegXml"
        app:layout_constraintVertical_bias="0.169"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/registerButtonRegXml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/iRegister"
        android:onClick="registerRegAct"
        android:textSize="16sp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordAgainEditTextRegXml"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/haveYouRegistered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haveYouRegistered"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButtonRegXml"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/logInRegXml"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:onClick="logInRegAct"
        android:text="@string/logInReg"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@+id/haveYouRegistered"
        app:layout_constraintTop_toBottomOf="@+id/registerButtonRegXml"
        app:layout_constraintVertical_bias="0.350" />


</androidx.constraintlayout.widget.ConstraintLayout>