<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/titleSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179">

    </TextView>

    <TextView
        android:id="@+id/titleOfPlayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleOfPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSummary"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.132"></TextView>

    <TextView
        android:id="@+id/numberOfSeatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="Székszám: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOfPlayTitle"
        app:layout_constraintVertical_bias="0.22"></TextView>

    <TextView
        android:id="@+id/priceOfPlayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="Fizetendő összeg: "
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfSeatTitle"
        app:layout_constraintVertical_bias="0.36"></TextView>

    <TextView
        android:id="@+id/titleOfPlayInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleOfPlay"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSummary"
        app:layout_constraintVertical_bias="0.215"></TextView>

    <TextView
        android:id="@+id/numberOfSeatInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="Székszám: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toEndOf="@+id/numberOfSeatTitle"
        app:layout_constraintTop_toBottomOf="@+id/titleOfPlayInput"
        app:layout_constraintVertical_bias="0.107"></TextView>

    <TextView
        android:id="@+id/priceOfPlayInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="Fizetendő összeg: "
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/priceOfPlayTitle"
        app:layout_constraintTop_toBottomOf="@+id/numberOfSeatInput"
        app:layout_constraintVertical_bias="0.375"></TextView>

    <Button
        android:id="@+id/bookATicketSummaryAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="bookMyTicket"
        android:text="Foglalom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceOfPlayTitle"
        app:layout_constraintVertical_bias="0.555"></Button>

    <Button
        android:id="@+id/backToSeatSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/bookATicketSummaryAct"
        app:layout_constraintTop_toBottomOf="@+id/priceOfPlayInput"
        app:layout_constraintVertical_bias="0.555"
        android:onClick="backToSeatSelection"
        >
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>